arr/qbit/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent-ingress
  namespace: arr
spec:
  ingressClassName: traefik
  rules:
    - host: qbittorrent.home.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend: 
              service:
                name: qbit-service
                port:
                  name: web-ui
