arr/qbit/tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbit-ingress
  namespace: arr
  annotations:
    tailscale.com/proxy-group: ingress-proxies
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - arr-ha
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: qbit-service
            port:
              name: web-ui
